<resources>
    <string name="app_name">Cources2023</string>
    <string name="back">Back</string>
    <string name="avengers_title">Avengers:\nEnd Game</string>
    <string name="age_13">13+</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_desc">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris \nEvans</string>
    <string name="mark_ruffalo">Mark \nRuffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
</resources>