<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_details_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <ImageView
        android:id="@+id/movie_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background_avengers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gradient_movie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/movie_details_gradient"
        app:layout_constraintBottom_toBottomOf="@id/movie_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/movie_background" />

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="6dp"
        android:layout_height="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <TextView
        android:id="@+id/back_button"
        style="@style/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_56"
        android:text="@string/back"
        app:layout_constraintStart_toEndOf="@id/back_icon"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/age_tab"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@drawable/age_tab"
        app:layout_constraintBottom_toTopOf="@id/movie_title"
        app:layout_constraintStart_toEndOf="@id/guideline_start" />

    <TextView
        android:id="@+id/age_text"
        style="@style/AgeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/age_13"
        app:layout_constraintBottom_toBottomOf="@id/age_tab"
        app:layout_constraintEnd_toEndOf="@id/age_tab"
        app:layout_constraintStart_toStartOf="@id/age_tab"
        app:layout_constraintTop_toTopOf="@id/age_tab" />

    <TextView
        android:id="@+id/movie_title"
        style="@style/MovieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/avengers_title"
        app:layout_constraintBottom_toBottomOf="@id/movie_background"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/movie_background"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/movie_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="@color/name_of_category"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/movie_title" />

    <ImageView
        android:id="@+id/starIcon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/star_icon_active"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/movie_category" />

    <ImageView
        android:id="@+id/starIcon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_stars"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/star_icon_active"
        app:layout_constraintStart_toEndOf="@id/starIcon1"
        app:layout_constraintTop_toBottomOf="@id/movie_category" />

    <ImageView
        android:id="@+id/starIcon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_stars"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/star_icon_active"
        app:layout_constraintStart_toEndOf="@id/starIcon2"
        app:layout_constraintTop_toBottomOf="@id/movie_category" />

    <ImageView
        android:id="@+id/starIcon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_stars"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/star_icon_active"
        app:layout_constraintEnd_toStartOf="@id/starIcon5"
        app:layout_constraintStart_toEndOf="@id/starIcon3"
        app:layout_constraintTop_toBottomOf="@id/movie_category" />

    <ImageView
        android:id="@+id/starIcon5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_stars"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/star_icon_inactive"
        app:layout_constraintStart_toEndOf="@id/starIcon4"
        app:layout_constraintTop_toBottomOf="@id/movie_category" />

    <TextView
        android:id="@+id/reviews_count"
        style="@style/ReviewsCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/_125_reviews"
        app:layout_constraintBottom_toBottomOf="@id/starIcon5"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/starIcon5"
        app:layout_constraintTop_toTopOf="@id/starIcon5" />

    <TextView
        android:id="@+id/storyline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/storyline"
        android:textAppearance="@style/SubTitleMovies"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/reviews_count" />

    <TextView
        android:id="@+id/storyline_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha=".75"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/storyline_desc"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/storyline" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cast"
        android:textAppearance="@style/SubTitleMovies"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/storyline_desc" />

    <ImageView
        android:id="@+id/actor_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/actor_1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@+id/actor_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <TextView
        android:id="@+id/name_actor_1"
        style="@style/ActorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/robert_downey_jr"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/actor_1"
        app:layout_constraintEnd_toEndOf="@id/actor_1"
        app:layout_constraintTop_toBottomOf="@id/actor_1"/>

    <ImageView
        android:id="@+id/actor_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/actor_2"
        app:layout_constraintEnd_toStartOf="@+id/actor_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/actor_1"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <TextView
        android:id="@+id/name_actor_2"
        style="@style/ActorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chris_evans"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/actor_2"
        app:layout_constraintEnd_toEndOf="@id/actor_2"
        app:layout_constraintTop_toBottomOf="@id/actor_2"/>

    <ImageView
        android:id="@+id/actor_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/actor_3"
        app:layout_constraintEnd_toStartOf="@+id/actor_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/actor_2"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <TextView
        android:id="@+id/name_actor_3"
        style="@style/ActorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mark_ruffalo"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/actor_3"
        app:layout_constraintEnd_toEndOf="@id/actor_3"
        app:layout_constraintTop_toBottomOf="@id/actor_3"/>

    <ImageView
        android:id="@+id/actor_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/actor_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/actor_3"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <TextView
        android:id="@+id/name_actor_4"
        style="@style/ActorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chris_hemsworth"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@id/actor_4"
        app:layout_constraintEnd_toEndOf="@id/actor_4"
        app:layout_constraintTop_toBottomOf="@id/actor_4"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cast_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="actor_1,actor_2,actor_3,actor_4, name_actor_1, name_actor_2, name_actor_3, name_actor_4, cast"/>

</androidx.constraintlayout.widget.ConstraintLayout>